Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33519

Example file is being searched from the wrong location

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 18.0.0-beta1
    • Qt Creator 18.0.0-beta1
    • All Other Issues
    • None
    • Creator 18.0.0-beta1 + Qt 6.8.4
    • d32d12343 (18.0)

      Test steps:
      1. Install Creator 18.0.0-beta1 + Qt 6.8.4
      2. Open the example 'Qt Quick Controls - Gallery'

      Result:
      'File does not exist' error note displayed. This is not reproducible with Creator 17.0.1.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes