Examples: Work around broken file references in examples

Check that we do not open a file that doesn't exist as the main file,
but print a warning to console, so maybe someone can notice and fixe Qt.

Fixes: QTCREATORBUG-33519
Change-Id: I380e14e4c7b0bb80024e617f480fab3074d25924
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>